--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "vite build",
-    "start": "vite"
+    "start": "vite",
+    "prettier": "prettier \"**/*.{mjs,js,jsx,ts,tsx,json,css,scss}\" --write"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "sass": "^1.64.2",
     "vite": "^4.4.7"
